# espresso-api

./: .gitignore  01. face_landmark_test.ipynb  02.face landmark.ipynb  03. predict_emotion.ipynb  61. deep face test.ipynb  62.emotiefflib test.ipynb  71.데이터허브 한국인 감정인식 데이터.ipynb  72. 데이터허브 감정데이터 to json.ipynb  81.sample.ipynb  82.mpimage.ipynb  README.md  chat.py  face_landmarks.json  main.py  pyproject.toml  test.ipynb
lib/: connection_manager.py  emotiefflib.py  errors.py  game_manager.py  landmark_util.py
ref/: all_member_api.py  main.py  mediapipe_face.py  st_main.py
routers/: face_landmark.py
static/: chat.html  index.html
